# TradingBot

./: .env.example  .gitignore  Gesicherte Terminal-Ausgabe.txt  README.md  pyproject.toml
config/: einstellungen.toml  settings.py
docs/handbuch/benutzer/: README.md
docs/handbuch/technisch/: README.md
docs/phasen/: 00_projektanalyse.md  01_systemarchitektur.md  02_technologieauswahl.md  03_entwicklungsumgebung.md
scripts/: README.md
src/tradingbot/: __main__.py  schema_migration.py
src/tradingbot/backtest/: capital_allocation.py  comparison.py  correlation.py  engine.py  metrics.py  models.py  (+16 more)
tests/: README.md  test_audit.py  test_backtest.py  test_balance_reconciliation.py  test_binance_account.py  test_binance_provider.py  test_binance_symbol_filters.py  test_capital_allocation.py  test_cash_management.py  test_cli_commands.py  test_cli_composition.py  test_cli_config.py  test_constraints.py  test_correlation.py  test_engine.py  test_execution.py  test_execution_costs.py  test_health.py  test_live_broker.py  test_main.py  test_market.py  test_mock_broker.py  test_multi_asset.py  test_multi_asset_metrics.py  test_optimization.py  test_orchestrator.py  test_order_history.py  test_order_manager.py  test_order_persistence.py  test_order_repository.py  test_paper_trading_engine.py  test_paper_trading_persistence.py  test_parameter_grid.py  test_portfolio.py  test_portfolio_analytics.py  test_portfolio_comparison.py  test_portfolio_construction_engine.py  test_portfolio_construction_optimization.py  test_portfolio_engine.py  test_portfolio_persistence.py  (+25 more)
(+55 files in other folders)
