[project]
name = "tradingbot"
version = "0.1.0"
description = "Automatisierter Swing-Trading-Bot fuer Kryptowaehrungen und Aktien (Paper-Trading)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietaer - alle Rechte vorbehalten" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pandas-market-calendars>=4.4",
    "streamlit>=1.39",
    "loguru>=0.7",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
